import React from 'react';
import 'jest-styled-components';
import renderer from 'react-test-renderer';
import { render, screen } from '@testing-library/react';
import Nav from '../../styles/Nav';
import { dark } from '../../styles/Theme';

describe('<Nav />', () => {
  it('renders default', () => {
    const component = renderer.create(<Nav />);
    let tree = component.toJSON();

    expect(tree).toMatchSnapshot();
  });

  it('renders with theme', () => {
    const component = renderer.create(<Nav theme={dark} />);
    let tree = component.toJSON();

    expect(tree).toMatchSnapshot();
  });

  it('renders hidden', () => {
    render(<Nav />);
    expect(screen.getByRole('navigation')).toHaveStyleRule('opacity', '0');
  });

  it('renders visible', () => {
    render(<Nav $hide={false} />);
    expect(screen.getByRole('navigation')).toHaveStyleRule('opacity', '1.0');
  });
});
